Se agrego formato al aterior codigo y se inicio con la lección intermedia de HTML

--- a/2.2+Paragraph+Element/2.2 Paragraph Element/index.html
+++ b/2.2+Paragraph+Element/2.2 Paragraph Element/index.html
@@ -1,14 +1,20 @@
-<p>First paragraph. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-aliqua. Neque convallis a cras semper auctor neque vitae. Magna fermentum iaculis eu non. Vivamus arcu
-felis bibendum ut tristique et. Justo nec ultrices dui sapien eget mi. In vitae turpis massa sed elementum tempus. Eu
-facilisis sed odio morbi quis commodo. Sagittis aliquam malesuada bibendum arcu vitae elementum curabitur vitae.</p>
+<p>First paragraph. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+    et dolore magna
+    aliqua. Neque convallis a cras semper auctor neque vitae. Magna fermentum iaculis eu non. Vivamus arcu
+    felis bibendum ut tristique et. Justo nec ultrices dui sapien eget mi. In vitae turpis massa sed elementum tempus.
+    Eu
+    facilisis sed odio morbi quis commodo. Sagittis aliquam malesuada bibendum arcu vitae elementum curabitur vitae.</p>
 
-<p> Second paragraph. Suscipit adipiscing bibendum est ultricies. Tortor aliquam nulla facilisi cras fermentum. Eget aliquet nibh praesent
-tristique magna. In hac habitasse platea dictumst vestibulum. Ornare quam viverra orci sagittis eu. Sit amet est
-placerat in.  Egestas egestas fringilla phasellus faucibus scelerisque eleifend donec pretium. Condimentum
-lacinia quis vel eros donec ac odio.</p>
+<p> Second paragraph. Suscipit adipiscing bibendum est ultricies. Tortor aliquam nulla facilisi cras fermentum. Eget
+    aliquet nibh praesent
+    tristique magna. In hac habitasse platea dictumst vestibulum. Ornare quam viverra orci sagittis eu. Sit amet est
+    placerat in. Egestas egestas fringilla phasellus faucibus scelerisque eleifend donec pretium. Condimentum
+    lacinia quis vel eros donec ac odio.</p>
 
-<p> Third paragraph. Nisl purus in mollis nunc sed id semper risus. Ipsum a arcu cursus vitae congue mauris rhoncus aenean. Ridiculus mus
-mauris vitae ultricies leo integer malesuada nunc. In tellus integer feugiat scelerisque. Lectus mauris ultrices eros in
-cursus turpis massa. Lacus sed viverra tellus in hac habitasse platea dictumst vestibulum. Nisl condimentum id venenatis a condimentum 
-vitae sapien.</p>
+<p> Third paragraph. Nisl purus in mollis nunc sed id semper risus. Ipsum a arcu cursus vitae congue mauris rhoncus
+    aenean. Ridiculus mus
+    mauris vitae ultricies leo integer malesuada nunc. In tellus integer feugiat scelerisque. Lectus mauris ultrices
+    eros in
+    cursus turpis massa. Lacus sed viverra tellus in hac habitasse platea dictumst vestibulum. Nisl condimentum id
+    venenatis a condimentum
+    vitae sapien.</p>
