--- a/3.4+Birthday+Invite+Project/3.4 Birthday Invite Project/index.html
+++ b/3.4+Birthday+Invite+Project/3.4 Birthday Invite Project/index.html
@@ -13,5 +13,5 @@
     </ul>
 
     <h3> This is where you need to go: </h3>
-    <a href="https://maps.app.goo.gl/q2GACS1F1kBRu9Cm6">This is my house</a>
+    <a href="https://maps.app.goo.gl/pwyS2KSPSesfwWxDA">This is my house</a>
 </center>
