Avance del proyecto Online Resume

--- a/4.4 Proyect 1 - Online Resume/index.html
+++ b/4.4 Proyect 1 - Online Resume/index.html
@@ -26,11 +26,82 @@
                 <span><strong>Stefanini</strong> - <em>Project Leader</em></span>
                 <span style="white-space: nowrap;">2022 - Present</span>
             </span>
+            <br>
             <ul>
-                <li>Developing and maintaining COBOL, WFL, and ALGOL programs for banking systems.</li>
-                <li>Collaborating with cross-functional teams to ensure system integrity and performance.</li>
+
+                <li>Led the full lifecycle development of COBOL applications for Unisys banking systems, coordinating
+                    design, coding, testing and deployment.</li>
+                <li>Collaborated in Agile, cross-functional teams using Scrum: facilitated sprint planning, daily
+                    stand-ups and retrospectives to drive continuous delivery.</li>
+                <li>Conducted requirements-gathering workshops with delivery teams to define and document functional and
+                    non-functional specifications.</li>
+                <li>Coordinated the removal of legacy COBOL modules; reviewed code and migrated data to improve system
+                    architecture.</li>
+                <li>Leveraged Unisys Web Enabler and Workbench environments to develop, debug and optimize mainframe
+                    programs.</li>
+                <li>Developed and maintained WFL (Workflow Language) scripts for batch processing, implementing robust
+                    error handling and performance tuning.</li>
+                <li>Designed, developed and integrated new application features, focusing on requirement analysis and
+                    resolving business-logic errors.</li>
+                <li>Managed Informatica upgrade and migration projects, ensuring smooth transitions with minimal
+                    disruption.</li>
+                <li>Supported project-management activities, scaling resources as needed and improving delivery
+                    timelines by 15%.</li>
+                <li>Acted as liaison between technical teams and business stakeholders, translating complex data
+                    concepts into actionable insights.</li>
+                <li>Ensured data-compliance and governance standards across all migration and transformation projects,
+                    reducing risk.</li>
             </ul>
+            <br>
+            <span style="display: flex; justify-content: space-between; align-items: center; width: 100%;">
+                <span><strong>Tech stack: </strong> <span style="white-space: nowrap;">Jira, Scrum, COBOL, WFL, ALGOL,
+                        Web Enabler, Workbench, ALM, Bitbucket.</span>
         </li>
+    </ul>
+
+    <h3> Education </h3>
+    <hr style="border: 1px solid black; width: 100%;">
+
+    <ul style=" display: inline-block; text-align: left;">
+        <li>
+            <span style="display: flex; justify-content: space-between; align-items: center; width: 100%;">
+                <span><strong>Bachelor of computer systems engineer </strong>
+                    <span style="margin-left: 600px;">February 2022 - 2025</span>
+                </span>
+        </li>
+        <em>Universidad Virtual del Estado de Guanajuato</em>
+        </span>
+        <br>
+    </ul>
+
+    <ul style=" display: inline-block; text-align: left;">
+        <li>
+            <span style="display: flex; justify-content: space-between; align-items: center; width: 100%;">
+                <span><strong>Bachelor of computer systems engineer </strong>
+                    <span style="margin-left: 600px;">August 2018 - August 2021</span>
+                </span>
+        </li>
+        <em>Universidad de Guanajuato, Salamanca, Guanajuato</em>
+        </span>
+        <br>
+    </ul>
+
+<h3> Etech stack, languages y certificates </h3>
+    <hr style="border: 1px solid black; width: 100%;">
+
+<ul>
+    <li><strong> Languages:</strong>  Spanish (Native), English (B2)</li>
+    <li><strong> Technologies:</strong> COBOL, WFL, ALGOL, Unisys Web Enabler, Workbench, JIRA, ALM, Bitbucket</li>
+    <li><strong>Certificates:</strong> 
+        <ul>
+            <li>Scrum Fundamentals Certified (SFC)</li>
+            <li>Agile Project Management</li>
+        </ul>
+    </li>
+</ul>
+
+
+
 
 
 </body>
