Actualización del proyecto Online Resume

--- a/4.4 Proyect 1 - Online Resume/index.html
+++ b/4.4 Proyect 1 - Online Resume/index.html
@@ -95,7 +95,7 @@
     <li><strong>Certificates:</strong> 
         <ul>
             <li>Scrum Fundamentals Certified (SFC)</li>
-            <li>Agile Project Management</li>
+            <li> <a href="./Proton.html"> PROTON</a></li>
         </ul>
     </li>
 </ul>
