Proyecto terminado Online Resume

--- a/4.4 Proyect 1 - Online Resume/index.html
+++ b/4.4 Proyect 1 - Online Resume/index.html
@@ -86,22 +86,39 @@
         <br>
     </ul>
 
-<h3> Etech stack, languages y certificates </h3>
+    <h3> Etech stack, languages y certificates </h3>
     <hr style="border: 1px solid black; width: 100%;">
 
-<ul>
-    <li><strong> Languages:</strong>  Spanish (Native), English (B2)</li>
-    <li><strong> Technologies:</strong> COBOL, WFL, ALGOL, Unisys Web Enabler, Workbench, JIRA, ALM, Bitbucket</li>
-    <li><strong>Certificates:</strong> 
-        <ul>
-            <li>Scrum Fundamentals Certified (SFC)</li>
-            <li> <a href="./Proton.html"> PROTON</a></li>
-        </ul>
-    </li>
-</ul>
+    <ul>
+        <li><strong> Languages:</strong> Spanish (Native), English (B2)</li>
+        <li><strong> Technologies:</strong> COBOL, WFL, ALGOL, Unisys Web Enabler, Workbench, JIRA, ALM, Bitbucket</li>
+        <li><strong>Certificates:</strong>
+            <ul>
+                <li>Scrum Master</li>
+                <li> <a href="./Proton.html"> PROTON</a></li>
+            </ul>
+        </li>
+    </ul>
+
+
+    <h3> Contact Information </h3>
+    <hr style="border: 1px solid black; width: 100%;">
+
+    <strong>Email:</strong> brian_g3@hotmail.com <br>
+    <strong>Phone:</strong> +52 477 703 94 95
+    <br>
+    <strong>LinkedIn:</strong> <a
+        href="https://www.linkedin.com/in/briangerardocovarrubias/">https://www.linkedin.com/in/briangerardocovarrubias/</a>
 
 
 
+    <center>
+        <br>
+        <footer>
+            <small>
+                Copyright © 2025 Brian Covarrubias. All Rights Reserved.
+            </small>
+        </footer>
 
 
 </body>
